[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/enemy_turret.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/enemy_turret_barrel.png" type="Texture" id=2]
[ext_resource path="res://Enemies/enemy_turret.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 6.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 10 )

[node name="enemy_turret" type="StaticBody2D"]
collision_layer = 17
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9.5 )
shape = SubResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 256

[node name="BulletSpawn" type="Node2D" parent="RayCast2D"]
position = Vector2( 15, 0 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 6 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
